<resources>
    <string name="app_name">CollegeBroker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="add_flat_info">You can add the flat details below. Please make sure that the details are correct.</string>
    <string name="sofa">Sofa</string>
    <string name="tv">TV</string>
    <string name="fridge">Refrigerator</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="logo_desc">College Broker Logo</string>
    <string name="rent_a_flat">Rent</string>
    <string name="logout">Log out</string>
    <string name="list_a_flat">Create Listing</string>

    //Login
    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="go">Login</string>
    <string name="login">LOGIN</string>
    <string name="name">Email Address</string>
    <string name="password">Password</string>
    <string name="rupee">\\u20B9</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras luctus pulvinar augue. Integer at velit ac elit cursus porta. Cras venenatis erat in ante congue gravida. Nunc ornare leo in nisi auctor, eu viverra turpis ornare. Cras sapien mi, pellentesque at gravida ac, faucibus ut libero. Vestibulum in massa laoreet, volutpat quam in, consequat ex. Fusce vel consectetur lacus, in tincidunt sem.  Suspendisse tempor sollicitudin lectus nec ultrices. Maecenas eget finibus augue. Suspendisse vel facilisis nisl. Donec egestas vestibulum euismod. Etiam in mauris eros. Integer ipsum ante, vehicula sed risus id, ultrices laoreet diam. Integer dolor libero, aliquam a quam et, ultricies consectetur massa. Donec vestibulum feugiat nisi eget molestie. Integer molestie fringilla nibh, in bibendum purus facilisis et. Donec sed rutrum diam, in tincidunt ex. Duis iaculis eu enim vel scelerisque. Nulla euismod finibus dui, sed convallis nisi scelerisque sed.  Quisque et odio est. Ut ante urna, lobortis quis ultrices id, porta eu neque. In pulvinar orci ac iaculis ultricies. Sed congue, nibh et faucibus posuere, leo velit accumsan quam, in ultrices dui tellus nec nisi. Curabitur sed metus lacinia, varius diam vel, pretium nisi. Donec porta ex lacus, at porta justo fermentum non. Phasellus lacinia vel nisl sed luctus. Quisque convallis quis ante eget congue. Duis sagittis dui ac sapien blandit rutrum.  Praesent vel magna semper, ultricies purus id, auctor diam. Donec blandit lectus vitae pulvinar tristique. Morbi suscipit lacus vitae convallis sagittis. Nullam velit quam, ornare nec urna id, vestibulum venenatis felis. Maecenas a ligula nisl. Fusce cursus diam vel lectus hendrerit, in maximus turpis aliquet. Curabitur id condimentum mi. Suspendisse orci libero, varius sed lectus quis, gravida facilisis lacus. Phasellus ligula lectus, varius ut porttitor in, feugiat in justo. Nulla vitae dictum ante. Duis at sodales tellus. Maecenas interdum nunc vitae nisl congue porttitor.  Quisque et egestas velit. Aliquam sed laoreet dui. Sed euismod ex id pulvinar maximus. Sed lobortis mi eget mauris vestibulum, at laoreet leo vestibulum. Sed ut nisl mauris. Mauris imperdiet tortor et elit porta, ac consequat massa rutrum. Curabitur rutrum tempus congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum justo ut molestie imperdiet.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
