<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateFlatFragment"
    android:background="@color/primaryDarkColor"
    android:padding="@dimen/activity_padding_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add_flat_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <AutoCompleteTextView
                android:id="@+id/nameEditText"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:hint="Society/Building/Location"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/flatTypeOptionsHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/house"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0.5"/>

            <ImageView
                android:src="@drawable/building"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:inputType="number"
                android:id="@+id/priceEditText"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:hint="Rent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/photoGalleryHolder"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/galleryRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </android.support.v7.widget.CardView>

        <RadioGroup
            android:layout_margin="8dp"
            android:id="@+id/furnishingRadioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/unfurnishedRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Unfurnished" />

            <RadioButton
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/furnishedRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Furnished" />
        </RadioGroup>

        <GridLayout
            android:id="@+id/furnishingHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:rowCount="2">

            <CheckBox
                android:layout_margin="8dp"
                android:id="@+id/sofaCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sofa"
                android:textSize="18sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:layout_constraintEnd_toStartOf="@+id/tvCheckBox"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox

                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:id="@+id/tvCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tv"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sofaCheckBox"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:id="@+id/fridgeCheckBox"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/fridge"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/wmCheckBox"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sofaCheckBox" />

            <CheckBox

                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:id="@+id/wmCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/washing_machine"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fridgeCheckBox"
                app:layout_constraintTop_toBottomOf="@id/tvCheckBox" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/doubleBedTIL"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/doubleBedET"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="number"
                    android:hint="Double Bed Count (0 for no bed)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/singleBedTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/singleBedET"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="number"
                    android:hint="Single Bed Count (0 for no bed)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tableTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/tableET"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="number"
                    android:hint="Table Count (0 for no table)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/chairCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/chairCountET"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="number"
                    android:hint="Chair Count (0 for no chair)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>